[package]
name = "lemonprepper-rs"
version = "0.1.0"
edition = "2021"
"default-run" = "lemonprepper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenvy = "0.15"
